# ljkiwi

./: .clang-format  .editorconfig  .gitignore  .luacov  .luarc.json  LICENSE  Makefile  Makefile.win  README.md  kiwi-scm-1.rockspec  kiwi.lua  ljkiwi.hpp
.github/workflows/: busted.yml
ckiwi/: .clang-format  ckiwi.cpp  ckiwi.h
kiwi/kiwi/: constraint.h  solver.h  util.h  variable.h
luakiwi/: luacompat.h  luakiwi-int.h  luakiwi.cpp
rjkiwi/: Cargo.toml
rjkiwi/src/: constraint.rs  expr.rs  lib.rs  solver.rs  util.rs  var.rs
rockspecs/: kiwi-scm-1.rockspec
spec/: constraint_spec.lua  expression_spec.lua  solver_spec.lua  term_spec.lua  var_spec.lua
