[package]
name = "rjkiwi"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["mimalloc"]

[dependencies]
casuarius = "0.1.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = { version = "0.1", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"], optional = true }
